# zig-wrapper

./: .gitignore  Cargo.toml  DEBUG_STATUS.md  FINAL_README.md  README.md  README_UPDATED.md  app_clean.zig  app_final.zig  app_workaround.zig  build-appimage.sh  build.zig  build_test.zig  check_callconv.zig  managed_test.zig  run.sh  rust_cc_check.rs  rust_ffi_wrapper.c  simple.zig  test_app.zig  working.zig  wry-zig-wrapper-x86_64.AppImage  wry.zig  wry_dlopen.c  wry_manual.zig  wry_shim.c  zig_ffi_wrapper.zig  zig_function.c
frontend/: app.js  index.html
html/: app.js  file_browser.html  index.html
skills/: websearch_skill.yaml
src/: lib.rs
tools/: appimage.zig
wry-zig-wrapper.AppDir/: .DirIcon  AppRun  wry-zig-wrapper.desktop
