[workspace]

[package]
name = "wry-zig-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wry = "0.54"
tao = "0.34"
once_cell = "1.19"

[features]
gtk = ["dep:gtk"]
devtools = ["wry/devtools"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }
